--- a/README
+++ b/README
@@ -33,27 +33,27 @@ Stage I Requirement:
 
 This part of the project is worth 10% of the total Unit marks and will be assessed against the following criteria:
 
-A total of at least 5 pages to meet your site purpose.
-Your website must support Internet Explorer, Firefox and Opera, under the version used in our Lab Linux system. You will receive 1% Bonus mark if it is XHTML1.1 Strict and CSS12.1 valid. Display the validation logo and the link to the validation results.
-Site Structure
-The site should implement a mixed structure, main pages to be linked in a hiearachical structure
-Pages naturally forms a linear chain should be connected using a linear structure.
-Navigational aids
-Site Map
-Navigation bars on every page
-Aesthetics
-The site should have a consistent look and feel (make sure you use external style sheets for formatting)
-While maintain a sense of belonging to the site, each page has to be different to show locality so readers know they are on the same site but browsing different pages (make sure you use inline and embedded styles)
-The design theme should agree with the site purpose and meet the needs and taste of potential audience
-Most importantly, make sure the foreground and background are contrasting well and good typography is used
-Sensible use of images and other multi-media formats.
-Hyperlinks
+* A total of at least 5 pages to meet your site purpose.
+* Your website must support Internet Explorer, Firefox and Opera, under the version used in our Lab Linux system. You will receive 1% Bonus mark if it is XHTML1.1 Strict and CSS12.1 valid. Display the validation logo and the link to the validation results.
+* Site Structure
+ - The site should implement a mixed structure, main pages to be linked in a hiearachical structure
+ - Pages naturally forms a linear chain should be connected using a linear structure.
+* Navigational aids
+ - Site Map
+ - Navigation bars on every page
+* Aesthetics
+ - The site should have a consistent look and feel (make sure you use external style sheets for formatting)
+ - While maintain a sense of belonging to the site, each page has to be different to show locality so readers know they are on the same site but browsing different pages (make sure you use inline and embedded styles)
+ - The design theme should agree with the site purpose and meet the needs and taste of potential audience
+ - Most importantly, make sure the foreground and background are contrasting well and good typography is used
+ - Sensible use of images and other multi-media formats.
+* Hyperlinks
 Use relative URLs to ensure portability
-Make sure no broken images or broken links
- Appropriate use the following techniques and provide a README file (can be in plain text) to document the rationale and how you used them. This README file should also help the project marker to locate which pages contain the required technique.
-Form Controls
-CSS
-Client-side Programming: Javascript - at least for basic form validation
-Due to possible incompability between browsers on rendering CSS positioning, page layout using tables is allowedPage Layout needs to be done by CSS positioning, no layout tables are allowed..
-Use of free images, free website template, free video clips and multimedia files obtained from the Web is permitted, but you will need to provide a separate Reference Page for the site (in addition to the 5+ required pages). Copyright materials must get permission before use.
+ - Make sure no broken images or broken links
+* Appropriate use the following techniques and provide a README file (can be in plain text) to document the rationale and how you used them. This README file should also help the project marker to locate which pages contain the required technique.
+* Form Controls
+* CSS
+* Client-side Programming: Javascript - at least for basic form validation
+* Due to possible incompability between browsers on rendering CSS positioning, page layout using tables is allowedPage Layout needs to be done by CSS positioning, no layout tables are allowed..
+* Use of free images, free website template, free video clips and multimedia files obtained from the Web is permitted, but you will need to provide a separate Reference Page for the site (in addition to the 5+ required pages). Copyright materials must get permission before use.
 
